[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
cargo-manifest = "0.17.0"
serde = "1.0.216"
serde_yaml = "0.9.31"
serde_json = "1.0.113"
toml = "0.8.8"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
leaky-bucket = "1.1.2"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["postgres", "uuid", "chrono"] }
uuid = "1.11.0"
chrono = "0.4.39"
